# queuetastic

./: .clang-format  CMakeLists.txt
buritto/: CMakeLists.txt
buritto/doc/: theory-of-operation.md
buritto/include/: buritto.hpp
buritto/src/: main.cpp
buritto/test/: test.cpp
buritto/test/unittests/: buritto_test.cpp
doc/: theoryOfOperation.txt
roquet/: CMakeLists.txt
roquet/doc/: theory-of-operation.md
roquet/include/: roquet.hpp
src/: buritto.hpp  main.cpp
test/: CMakeLists.txt  test.cpp
test/unittests/: buritto_test.cpp  roquet_test.cpp
